--- a/frontend/src/Skaters.css
+++ b/frontend/src/Skaters.css
@@ -14,6 +14,7 @@
 
 .description {
   padding-left: 15px;
+  padding-top: 15px;
   width: 192px;
   height: 51px;
   display: flex;
@@ -27,7 +28,6 @@
   letter-spacing: 3;
   color: #475463;
   font-size: 12px;
-  margin-top: 1px;
 }
 
 .event {
@@ -36,7 +36,6 @@
   font-size: 10px;
   color: #C4CBD0;
   letter-spacing: 3;
-  margin-top: 25px;
 }
 
 .video-modal {
